--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My Project</title>
 </head>
 <body>
-  <header>Header</header>
+  <header>Header 1 2 3</header>
   <main>Main</main>
   <footer>Footer</footer>
 </body>
